fix modal not centered

--- a/frontend/src/globalUI/_globalUI.scss
+++ b/frontend/src/globalUI/_globalUI.scss
@@ -1,16 +1,16 @@
 // ModalComponent
 .ModalOverlay {
-  align-items: center;
   background: rgba(0, 0, 0, 0.7);
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  align-items: center;
   justify-content: center;
+  height: 100%;
+  width: 100%;
+  top: 0;
   left: 0;
   overflow-y: auto;
   position: fixed;
-  top: 0;
-  width: 100vw;
   z-index: 998;
 }
 
@@ -18,29 +18,12 @@
   outline: none;
   background: white;
   border-radius: 5px;
-  max-height: 40rem;
+  max-height: 90vh;
+  max-width: 90vw;
   overflow-y: auto;
   padding: 24px;
-  position: fixed;
   width: auto;
   z-index: 999;
-
-  @media (max-width: 850px) {
-    max-width: 70rem;
-    width: 100%;
-  }
-
-  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-    left: calc(50% - 17.75em);
-  }
-
-  @media (min-height: 600px) {
-    max-height: em(550);
-  }
-
-  @media (min-height: 800px) {
-    max-height: calc(100vh - 6em);
-  }
 }
 
 // NotificationBar
